--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,7 +11,7 @@ Lint/UselessAssignment:
 Layout/FirstHashElementIndentation:
   Enabled: false
 
-Layout/AlignHash:
+Layout/HashAlignment:
   Enabled: false
 
 # HoundCI doesn't like this rule
